docs: Stage 3 - Tutorial generation (11 files) [skip ci]